--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "d4d0b9d0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any], false, Union{Nothing, Some{Any}}[nothing], var\"##generate_table_world#314\", Bool[0], false)"
+       "DynamicDSLFunction{Any}(Dict{Symbol, Any}(), Dict{Symbol, Any}(), Type[Any], false, Union{Nothing, Some{Any}}[nothing], var\"##generate_table_world#312\", Bool[0], false)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -26,70 +26,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6866dec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fac6ab97",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ebaeafbc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bcadde40",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9f74ea9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6e4b5aa",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "788de4b3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31f1b038",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "48c95caa",
    "metadata": {},
    "outputs": [],
@@ -97,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "id": "e56ad54c",
    "metadata": {},
    "outputs": [
@@ -107,7 +43,7 @@
        "condition (generic function with 1 method)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 3,
    "id": "82dc85ca",
    "metadata": {},
    "outputs": [
@@ -155,16 +91,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 13.344686 seconds (170.48 M allocations: 10.350 GiB, 8.15% gc time, 0.30% compilation time)\n"
+      "  2.202933 seconds (26.27 M allocations: 1.582 GiB, 5.67% gc time, 22.27% compilation time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(Any[Dict{String, Any}(\"mass\" => 100, \"base_shape\" => [\"table\"], \"abs_spatial\" => Dict(\"x\" => 500.0, \"z\" => 500.0, \"y\" => 373.0), \"dims\" => [747, 746, 747], \"color\" => \"white\", \"object_type\" => \"table\"), Dict{String, Any}(\"volume\" => 1728, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 639.5179865673524, \"z\" => 189.4930989499669, \"y\" => 752.0), \"dims\" => [12, 12, 12], \"mass\" => 2.16, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 3375, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 482.91359589442624, \"z\" => 425.3183812629318, \"y\" => 753.5), \"dims\" => [15, 15, 15], \"mass\" => 4.21875, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 4913, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 268.00288638063034, \"z\" => 558.8697189196205, \"y\" => 754.5), \"dims\" => [17, 17, 17], \"mass\" => 6.14125, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 1331, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 574.1894243315776, \"z\" => 814.4704569216095, \"y\" => 751.5), \"dims\" => [11, 11, 11], \"mass\" => 1.6637499999999998, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 1728, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 199.8509188187565, \"z\" => 620.9179335861979, \"y\" => 752.0), \"dims\" => [12, 12, 12], \"mass\" => 2.16, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 3375, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 149.76520013750985, \"z\" => 552.5661990035076, \"y\" => 753.5), \"dims\" => [15, 15, 15], \"mass\" => 4.21875, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 5832, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 598.2930281846698, \"z\" => 675.7300502957032, \"y\" => 755.0), \"dims\" => [18, 18, 18], \"mass\" => 7.29, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 6859, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 584.6054890252941, \"z\" => 464.0886542089769, \"y\" => 755.5), \"dims\" => [19, 19, 19], \"mass\" => 8.57375, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 1000, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 179.89673839402602, \"z\" => 157.26646661549105, \"y\" => 751.0), \"dims\" => [10, 10, 10], \"mass\" => 1.25, \"object_type\" => \"block\")], (\"NUM_SIMS\", 471676))"
+       "(Any[Dict{String, Any}(\"mass\" => 100, \"base_shape\" => [\"table\"], \"abs_spatial\" => Dict(\"x\" => 500.0, \"z\" => 500.0, \"y\" => 373.5), \"dims\" => [746, 747, 746], \"color\" => \"white\", \"object_type\" => \"table\"), Dict{String, Any}(\"volume\" => 1728, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 840.0378634006739, \"z\" => 870.965429334162, \"y\" => 753.0), \"dims\" => [12, 12, 12], \"mass\" => 2.16, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 1000, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 133.15015300892694, \"z\" => 204.52153667108493, \"y\" => 752.0), \"dims\" => [10, 10, 10], \"mass\" => 1.25, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 3375, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 325.14524586085975, \"z\" => 351.84245930409685, \"y\" => 754.5), \"dims\" => [15, 15, 15], \"mass\" => 4.21875, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 8000, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 541.0501954352299, \"z\" => 459.60372695783997, \"y\" => 757.0), \"dims\" => [20, 20, 20], \"mass\" => 10.0, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 1000, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 310.09713373680415, \"z\" => 242.24416885161781, \"y\" => 752.0), \"dims\" => [10, 10, 10], \"mass\" => 1.25, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 2197, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 684.1804027835561, \"z\" => 281.98684941659224, \"y\" => 753.5), \"dims\" => [13, 13, 13], \"mass\" => 2.74625, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 3375, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 865.344887828772, \"z\" => 622.3804657079745, \"y\" => 754.5), \"dims\" => [15, 15, 15], \"mass\" => 4.21875, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 2197, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 761.3544577038633, \"z\" => 663.1415220076224, \"y\" => 753.5), \"dims\" => [13, 13, 13], \"mass\" => 2.74625, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 3375, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 548.1778806311145, \"z\" => 701.6486584825128, \"y\" => 754.5), \"dims\" => [15, 15, 15], \"mass\" => 4.21875, \"object_type\" => \"block\")], (\"NUM_SIMS\", 68966))"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,13 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "770313b7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# How many blocks are there?\n",
-    "\n",
     "\n",
     "# How many blocks are on the table?\n",
     "\n",
