Worked on some natural language translations

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -56,11 +56,7 @@
     "    world = model(args)\n",
     "    counter = 0\n",
     "    while all_satisfied == false\n",
-    "#         function apply(f, w)\n",
-    "#             return f(w)\n",
-    "#         end\n",
     "        if all([c(world) for c in list_of_conditions])\n",
-    "#         if all(map(f -> f(world), list_of_conditions))\n",
     "            all_satisfied = true\n",
     "        else\n",
     "            world = model(args)\n",
@@ -83,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "id": "82dc85ca",
    "metadata": {},
    "outputs": [
@@ -91,16 +87,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  2.202933 seconds (26.27 M allocations: 1.582 GiB, 5.67% gc time, 22.27% compilation time)\n"
+      "  0.040457 seconds (37.45 k allocations: 2.103 MiB, 98.84% compilation time)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(Any[Dict{String, Any}(\"mass\" => 100, \"base_shape\" => [\"table\"], \"abs_spatial\" => Dict(\"x\" => 500.0, \"z\" => 500.0, \"y\" => 373.5), \"dims\" => [746, 747, 746], \"color\" => \"white\", \"object_type\" => \"table\"), Dict{String, Any}(\"volume\" => 1728, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 840.0378634006739, \"z\" => 870.965429334162, \"y\" => 753.0), \"dims\" => [12, 12, 12], \"mass\" => 2.16, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 1000, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 133.15015300892694, \"z\" => 204.52153667108493, \"y\" => 752.0), \"dims\" => [10, 10, 10], \"mass\" => 1.25, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 3375, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 325.14524586085975, \"z\" => 351.84245930409685, \"y\" => 754.5), \"dims\" => [15, 15, 15], \"mass\" => 4.21875, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 8000, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 541.0501954352299, \"z\" => 459.60372695783997, \"y\" => 757.0), \"dims\" => [20, 20, 20], \"mass\" => 10.0, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 1000, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 310.09713373680415, \"z\" => 242.24416885161781, \"y\" => 752.0), \"dims\" => [10, 10, 10], \"mass\" => 1.25, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 2197, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 684.1804027835561, \"z\" => 281.98684941659224, \"y\" => 753.5), \"dims\" => [13, 13, 13], \"mass\" => 2.74625, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 3375, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 865.344887828772, \"z\" => 622.3804657079745, \"y\" => 754.5), \"dims\" => [15, 15, 15], \"mass\" => 4.21875, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 2197, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 761.3544577038633, \"z\" => 663.1415220076224, \"y\" => 753.5), \"dims\" => [13, 13, 13], \"mass\" => 2.74625, \"object_type\" => \"block\"), Dict{String, Any}(\"volume\" => 3375, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 548.1778806311145, \"z\" => 701.6486584825128, \"y\" => 754.5), \"dims\" => [15, 15, 15], \"mass\" => 4.21875, \"object_type\" => \"block\")], (\"NUM_SIMS\", 68966))"
+       "9-element Vector{Any}:\n",
+       " Dict{String, Any}(\"mass\" => 100, \"base_shape\" => [\"table\"], \"abs_spatial\" => Dict(\"x\" => 500.0, \"z\" => 500.0, \"y\" => 304.0), \"dims\" => [714, 608, 714], \"color\" => \"white\", \"object_type\" => \"table\")\n",
+       " Dict{String, Any}(\"volume\" => 1000, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 149.67387060369845, \"z\" => 410.01548092266466, \"y\" => 613.0), \"dims\" => [10, 10, 10], \"mass\" => 1.25, \"object_type\" => \"block\")\n",
+       " Dict{String, Any}(\"volume\" => 4913, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 259.80774266631687, \"z\" => 368.3422705715194, \"y\" => 616.5), \"dims\" => [17, 17, 17], \"mass\" => 6.14125, \"object_type\" => \"block\")\n",
+       " Dict{String, Any}(\"volume\" => 2197, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 453.50005234141025, \"z\" => 193.308426267991, \"y\" => 614.5), \"dims\" => [13, 13, 13], \"mass\" => 2.74625, \"object_type\" => \"block\")\n",
+       " Dict{String, Any}(\"volume\" => 2197, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 501.76462473478784, \"z\" => 388.7074323544123, \"y\" => 614.5), \"dims\" => [13, 13, 13], \"mass\" => 2.74625, \"object_type\" => \"block\")\n",
+       " Dict{String, Any}(\"volume\" => 2197, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 711.7965003090433, \"z\" => 210.73426409192177, \"y\" => 614.5), \"dims\" => [13, 13, 13], \"mass\" => 2.74625, \"object_type\" => \"block\")\n",
+       " Dict{String, Any}(\"volume\" => 5832, \"color\" => \"yellow\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 260.92654900987543, \"z\" => 659.3540800248334, \"y\" => 617.0), \"dims\" => [18, 18, 18], \"mass\" => 7.29, \"object_type\" => \"block\")\n",
+       " Dict{String, Any}(\"volume\" => 1331, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 384.9043315070802, \"z\" => 690.6877866840846, \"y\" => 613.5), \"dims\" => [11, 11, 11], \"mass\" => 1.6637499999999998, \"object_type\" => \"block\")\n",
+       " Dict{String, Any}(\"volume\" => 1331, \"color\" => \"red\", \"base_shape\" => [\"cube\"], \"abs_spatial\" => Dict(\"x\" => 238.74146227413888, \"z\" => 160.26796335852114, \"y\" => 613.5), \"dims\" => [11, 11, 11], \"mass\" => 1.6637499999999998, \"object_type\" => \"block\")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,18 +117,45 @@
     "# println(scene)\n",
     "\n",
     "# The table is extremely large\n",
-    "cond1 = w -> (w[1][\"dims\"][1] > 745) && (w[1][\"dims\"][3] > 745)\n",
+    "cond1 = w -> (w[1][\"dims\"][1] > 600) && (w[1][\"dims\"][3] > 600)\n",
     "\n",
     "# The table is extremely tall\n",
     "\n",
-    "cond2 = w -> w[1][\"dims\"][2] > 745\n",
+    "cond2 = w -> w[1][\"dims\"][2] > 600\n",
     "\n",
-    "# There are 9 blocks\n",
-    "cond3 = w -> length(w) == 9 + 1\n",
+    "# There are at least 5 blocks\n",
+    "cond3 = w -> length(w) >= 6\n",
     "\n",
-    "# There are at least 5 red blocks\n",
-    "\n",
-    "@time condition(generate_table_world, default_world_dims, [cond1, cond2, cond3])"
+    "@time world = condition(generate_table_world, default_world_dims, [cond1, cond2, cond3])[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c22d8fe2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "how_many_on_table (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function how_many_on_table(world)\n",
+    "    counter = 0\n",
+    "    for i in 2:length(world)\n",
+    "        if world[i][\"abs_spatial\"][\"y\"] - world[i][\"dims\"][2] / 2 == world[1][\"dims\"][2]\n",
+    "            counter += 1\n",
+    "        end\n",
+    "    end\n",
+    "    return counter\n",
+    "end"
    ]
   },
   {
@@ -135,13 +167,29 @@
    "source": [
     "# How many blocks are there?\n",
     "\n",
+    "w -> length(filter_type(\"block\", w))\n",
+    "\n",
     "# How many blocks are on the table?\n",
     "\n",
+    "w -> length(filter_type(\"block\", filter_preposition((on, \"table\"), w)))\n",
+    "\n",
     "# How many red blocks are on the table?\n",
+    "    \n",
+    "w -> length(filter_color(\"red\", filter_type(\"block\", filter_preposition((on, \"table\"), w))))\n",
     "\n",
     "# Are there more yellow blocks or red blocks?\n",
     "\n",
-    "# What is the color of the heaviest red block?"
+    "num_yellow = length(filter_color(\"yellow\", filter_type(\"block\", w)))\n",
+    "num_red = length(filter_color(\"red\", filter_type(\"block\", w)))\n",
+    "w -> num_yellow > num_red ? \"yellow blocks\" : (num_yellow < num_red ? \"red blocks\" : \"same\")\n",
+    "\n",
+    "# What is the color of the heaviest block?\n",
+    "\n",
+    "red_blocks = filter_color(\"red\", filter_type(\"block\", w))\n",
+    "w -> the_color_of(max_by(\"mass\", red_blocks))\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
