--- a/analysis/embedding-visualization-demo.ipynb
+++ b/analysis/embedding-visualization-demo.ipynb
@@ -210,8 +210,7 @@
     "# Sanity check with OpenAI text embedding model with and without prompts\n",
     "import openai\n",
     "import os\n",
-    "#openai.api_key = os.environ[\"OPENAI_API_KEY\"]\n",
-    "openai.api_key=\"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\"\n",
+    "openai.api_key = os.environ[\"OPENAI_API_KEY\"]\n",
     "\n",
     "def get_openai_embeddings(sentences, prompt,model=\"text-embedding-ada-002\"):\n",
     "    sentence_embeddings = []\n",
